--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Tabldot - Premium Catering Solutions for Every Occasion</title>
@@ -19,6 +20,8 @@
 
     <link rel="preconnect" href="https://images.pexels.com" />
     <meta name="theme-color" content="#ea580c" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://tabldot.com/" />
   </head>
   <body>
     <div id="root"></div>
