--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,7 +19,9 @@
     <meta name="twitter:title" content="Tabldot - Premium Catering Solutions" />
     <meta name="twitter:description" content="Professional catering services for every occasion" />
 
-    <link rel="preconnect" href="https://images.pexels.com" />
+    <link rel="preconnect" href="https://images.pexels.com" crossorigin />
+    <link rel="dns-prefetch" href="https://images.pexels.com" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#ea580c" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://tabldot.com/" />
