--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Tabldot - Premium Catering Solutions for Every Occasion</title>
     <meta name="description" content="Experience world-class culinary excellence with Tabldot. Professional catering services for corporate events, weddings, daily meals, and special occasions. Fresh, healthy, and delicious meals delivered with care." />
@@ -14,6 +14,8 @@
     <meta property="og:title" content="Tabldot - Premium Catering Solutions" />
     <meta property="og:description" content="Experience world-class culinary excellence with fresh, healthy, and delicious meals delivered to your doorstep" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tabldot.com/" />
+    <meta property="og:site_name" content="Tabldot" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Tabldot - Premium Catering Solutions" />
@@ -21,9 +23,13 @@
 
     <link rel="preconnect" href="https://images.pexels.com" crossorigin />
     <link rel="dns-prefetch" href="https://images.pexels.com" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
     <meta name="theme-color" content="#ea580c" />
-    <meta name="robots" content="index, follow" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Tabldot" />
+    <meta name="robots" content="index, follow, max-image-preview:large" />
     <link rel="canonical" href="https://tabldot.com/" />
   </head>
   <body>
