--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/vite.svg" />
 
+    <style>
+      #root{min-height:100vh;background:#fff}
+      body{margin:0;font-family:system-ui,-apple-system,sans-serif;-webkit-font-smoothing:antialiased}
+      .animate-spin{animation:spin 1s linear infinite}
+      @keyframes spin{to{transform:rotate(360deg)}}
+    </style>
+
     <title>Tabldot - Premium Catering Solutions for Every Occasion</title>
     <meta name="description" content="Experience world-class culinary excellence with Tabldot. Professional catering services for corporate events, weddings, daily meals, and special occasions. Fresh, healthy, and delicious meals delivered with care." />
     <meta name="keywords" content="catering, corporate catering, event catering, food service, meal delivery, healthy meals, premium catering, tabldot" />
@@ -22,8 +29,7 @@
     <meta name="twitter:description" content="Professional catering services for every occasion" />
 
     <link rel="preconnect" href="https://images.pexels.com" />
-    <link rel="dns-prefetch" href="https://images.pexels.com" />
-    <link rel="preload" as="image" href="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=1280&dpr=1" fetchpriority="high" imagesrcset="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=640&dpr=1 640w, https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=1280&dpr=1 1280w, https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=1920&dpr=1 1920w" imagesizes="100vw" />
+    <link rel="preload" as="image" href="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=800&dpr=1" fetchpriority="high" imagesrcset="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=640&dpr=1 640w, https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=800&dpr=1 800w, https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=1200&dpr=1 1200w" imagesizes="100vw" />
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
     <meta name="theme-color" content="#ea580c" />
     <meta name="mobile-web-app-capable" content="yes" />
