--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 
     <style>
       #root{min-height:100vh;background:#fff}
-      body{margin:0;font-family:system-ui,-apple-system,sans-serif;-webkit-font-smoothing:antialiased}
+      body{margin:0;font-family:system-ui,-apple-system,sans-serif;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
+      *{box-sizing:border-box}
       .animate-spin{animation:spin 1s linear infinite}
       @keyframes spin{to{transform:rotate(360deg)}}
+      img{content-visibility:auto}
     </style>
+    <link rel="modulepreload" href="/src/main.tsx" />
+    <link rel="modulepreload" href="/src/App.tsx" />
 
     <title>Tabldot - Premium Catering Solutions for Every Occasion</title>
     <meta name="description" content="Experience world-class culinary excellence with Tabldot. Professional catering services for corporate events, weddings, daily meals, and special occasions. Fresh, healthy, and delicious meals delivered with care." />
@@ -29,8 +33,9 @@
     <meta name="twitter:title" content="Tabldot - Premium Catering Solutions" />
     <meta name="twitter:description" content="Professional catering services for every occasion" />
 
-    <link rel="preconnect" href="https://images.pexels.com" />
-    <link rel="preload" as="image" href="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=800&dpr=1" fetchpriority="high" imagesrcset="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=640&dpr=1 640w, https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=800&dpr=1 800w, https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=1200&dpr=1 1200w" imagesizes="100vw" />
+    <link rel="preconnect" href="https://images.pexels.com" crossorigin />
+    <link rel="dns-prefetch" href="https://images.pexels.com" />
+    <link rel="preload" as="image" href="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=640&dpr=1" fetchpriority="high" imagesrcset="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=640&dpr=1 640w, https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=800&dpr=1 800w" imagesizes="(max-width: 640px) 640px, 800px" />
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
     <meta name="theme-color" content="#ea580c" />
     <meta name="mobile-web-app-capable" content="yes" />
