--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <meta name="twitter:title" content="Tabldot - Premium Catering Solutions" />
     <meta name="twitter:description" content="Professional catering services for every occasion" />
 
-    <link rel="preconnect" href="https://images.pexels.com" crossorigin />
+    <link rel="preconnect" href="https://images.pexels.com" />
     <link rel="dns-prefetch" href="https://images.pexels.com" />
     <link rel="preload" as="image" href="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=640&dpr=1" fetchpriority="high" imagesrcset="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=640&dpr=1 640w, https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=800&dpr=1 800w" imagesizes="(max-width: 640px) 640px, 800px" />
-    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#ea580c" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
