--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
       @keyframes spin{to{transform:rotate(360deg)}}
       img{content-visibility:auto}
     </style>
-    <link rel="modulepreload" href="/src/main.tsx" />
-    <link rel="modulepreload" href="/src/App.tsx" />
 
     <title>Tabldot - Premium Catering Solutions for Every Occasion</title>
     <meta name="description" content="Experience world-class culinary excellence with Tabldot. Professional catering services for corporate events, weddings, daily meals, and special occasions. Fresh, healthy, and delicious meals delivered with care." />
@@ -34,8 +32,7 @@
     <meta name="twitter:description" content="Professional catering services for every occasion" />
 
     <link rel="preconnect" href="https://images.pexels.com" />
-    <link rel="dns-prefetch" href="https://images.pexels.com" />
-    <link rel="preload" as="image" href="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=640&dpr=1" fetchpriority="high" imagesrcset="https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=640&dpr=1 640w, https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=800&dpr=1 800w" imagesizes="(max-width: 640px) 640px, 800px" />
+    <link rel="preload" as="style" href="/src/index.css" onload="this.onload=null;this.rel='stylesheet'" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#ea580c" />
     <meta name="mobile-web-app-capable" content="yes" />
