--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'sha256-MS6/3FCg4WjP9gwgaBGwLpRCY6fZBgwmhVCdrPrNf3E='; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://images.pexels.com blob:; font-src 'self' data:; connect-src 'self' https://*.supabase.co; frame-ancestors 'none'; base-uri 'self'; form-action 'self'; upgrade-insecure-requests;">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/vite.svg" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
     <style>
       #root{min-height:100vh;background:#fff}
@@ -31,8 +31,8 @@
     <meta name="twitter:title" content="Tabldot - Premium Catering Solutions" />
     <meta name="twitter:description" content="Professional catering services for every occasion" />
 
-    <link rel="preconnect" href="https://images.pexels.com" />
-    <link rel="preload" as="style" href="/src/index.css" onload="this.onload=null;this.rel='stylesheet'" />
+    <link rel="preconnect" href="https://images.pexels.com" crossorigin />
+    <link rel="dns-prefetch" href="https://images.pexels.com" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#ea580c" />
     <meta name="mobile-web-app-capable" content="yes" />
